# TurboNet

./: .env  .gitignore  Broadcaster.rs  CONTRIBUTING.md  CUDA_BUILD_LINUX_MAC.md  CUDA_BUILD_WINDOWS.md  Cargo.toml  Debounced_Logic_pattern.rs  LICENSE  README.md  Shredder.rs  Tokio.rs  Verification_Implementation.c  Watchdog.c  build.rs  cargo_check_log.txt  compile_cuda.bat  neural_bus.json  shredder.cu  shredder.ptx  spectre.cu  spectre.ptx
.agent/skills/aws-pentesting/: SKILL.md
.agent/skills/crawl4ai-skill/: SKILL.md
.agent/skills/docker-expert/: SKILL.md
.agent/skills/git-commit-formatter/: SKILL.md
.agent/skills/json-to-pydantic/: SKILL.md
.agent/skills/legacy-refactor/: SKILL.md
.agent/skills/license-header-adder/: SKILL.md
.agent/skills/loki-mode/: SKILL.md
.agent/skills/quorum/: SKILL.md
.agent/skills/react-patterns/: SKILL.md
.agent/skills/ruthless-reviewer/: SKILL.md
.agent/skills/security-audit/: SKILL.md
.agent/skills/senior-engineering/: SKILL.md
.github/instructions/: snyk_rules.instructions.md
.github/workflows/: turbonet_ops.yml
benches/: pps_benchmark.rs
crates/core/turbonet-core/: Cargo.toml  build.rs  shredder.cu  spectre.cu
crates/core/turbonet-core/src/: brain.rs  crypto.rs  ghost_stub.rs  io_backend.rs  network.rs  neural_link.rs  shredder.rs
crates/cybersecurity/sentinel/src/: proc_hollow.rs
crates/pentesting/spectre/: Cargo.toml
crates/pentesting/spectre/src/: main.rs
crates/utils/tools/: Cargo.toml
crates/utils/tools/src/: beacon_gen.rs  net_guard.rs  strings_extract.rs
py_src/: quantum_engine.py  requirements.txt  wifi_cookie_predictor.py
sentinel/: Cargo.toml
sentinel/src/: hook_detector.rs  memscan.rs  token_steal.rs
spectre/: Cargo.toml
spectre/src/: main.rs
src/: ai_weights.rs  crypto.rs  deepseek_prompt.json  deepseek_weights.rs  fec.rs  gui.rs  io_backend.rs  lib.rs  network.rs  shredder.rs
tools/: Cargo.toml
tools/src/: attacker.rs  beacon_gen.rs  net_guard.rs  net_sniffer.rs  pe_parser.rs  strings_extract.rs
turbonet-core/: Cargo.toml  build.rs  shredder.ptx
turbonet-core/src/: ai_client.rs  ai_defense.rs  ai_weights.rs  brain.rs  crypto.rs  deepseek_weights.rs  fec.rs  gui.rs  io_backend.rs  lib.rs  network.rs  neural_link.rs  physics_world.rs  shredder.rs  spectre.rs  world_gen.rs
wifi-recon/: Cargo.toml
wifi-recon/src/: quantum_hound.rs  scan.rs
