[package]
name = "turbonet"
version = "0.2.0"
edition = "2021"

# SOTA Performance Feature Flags
[features]
default = []
onnx = ["ort"]                    # Local AI inference (Phase 3)
isal = ["reed-solomon-erasure"]   # Hardware FEC - uses pure Rust for now, ISA-L later
benchmark = ["criterion"]         # PPS benchmarking

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
cudarc = { version = "0.11", features = ["cuda-12000", "nvrtc", "driver"] }
network-interface = "1.1"
rand = "0.8"
aes-gcm = "0.10"
aead = "0.5"
dotenvy = "0.15"
indicatif = "0.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pqc_kyber = "0.7.1"
eframe = "0.29"
rfd = "0.12"
socket2 = "0.6.1"
local-ip-address = "0.6.8"
local_ipaddress = "0.1.3"
zeroize = { version = "1.7", features = ["derive"] }
sha2 = "0.10"
memmap2 = "0.9"
wifi_scan = "0.5"                # Native Wi-Fi scanning (Windows/Linux/macOS)

# Phase 3: Local AI Inference (ONNX Runtime)
ort = { version = "2.0.0-rc.9", optional = true }
ndarray = "0.16"

# Phase 2: FEC/Erasure Coding
reed-solomon-erasure = { version = "6.0", optional = true }

# Linux-only: Kernel Bypass (Phase 1 - future)
# [target.'cfg(target_os = "linux")'.dependencies]
# tokio-uring = { version = "0.5", optional = true }

# Benchmarking (Phase 1)
criterion = { version = "0.5", features = ["async_tokio"], optional = true }

[[bench]]
name = "pps_benchmark"
harness = false

[target.'cfg(windows)'.dependencies]
winwifi = "0.1"                  # Windows-specific Wi-Fi connection management
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Security",
] }

[[bin]]
name = "spectre"
path = "src/bin/spectre.rs"

[[bin]]
name = "quantum_hound"
path = "src/bin/quantum_hound.rs"

[[bin]]
name = "sentinel_memscan"
path = "src/bin/sentinel_memscan.rs"

[[bin]]
name = "pe_parser"
path = "src/bin/pe_parser.rs"

[[bin]]
name = "strings_extract"
path = "src/bin/strings_extract.rs"

[[bin]]
name = "hook_detector"
path = "src/bin/hook_detector.rs"

[[bin]]
name = "token_steal"
path = "src/bin/token_steal.rs"

[[bin]]
name = "proc_hollow"
path = "src/bin/proc_hollow.rs"

[[bin]]
name = "net_sniffer"
path = "src/bin/net_sniffer.rs"

[[bin]]
name = "beacon_gen"
path = "src/bin/beacon_gen.rs"
