[workspace]
members = [
    "turbonet-core",
    "spectre",
    "sentinel", 
    "tools",
    "wifi-recon"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["xingxerx"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
aes-gcm = "0.10"
aead = "0.5"
pqc_kyber = "0.7.1"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# Networking
socket2 = "0.6.1"
local-ip-address = "0.6.8"
network-interface = "1.1"

# CUDA
cudarc = { version = "0.11", features = ["cuda-12000", "nvrtc", "driver"] }

# Utilities
rand = "0.8"
indicatif = "0.17"

# WiFi
wifi_scan = "0.5"

# Windows dependencies  
[workspace.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Security",
]
