[package]
name = "tools"
version.workspace = true
edition.workspace = true
description = "Security analysis utilities"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
turbonet-core = { path = "../turbonet-core" }


[[bin]]
name = "pe-parser"
path = "src/pe_parser.rs"

[[bin]]
name = "strings-extract"
path = "src/strings_extract.rs"

[[bin]]
name = "net-sniffer"
path = "src/net_sniffer.rs"


[[bin]]
name = "beacon-gen"
path = "src/beacon_gen.rs"

[[bin]]
name = "net-guard"
path = "src/net_guard.rs"

