[package]
name = "turbonet-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
aes-gcm.workspace = true
aead.workspace = true
pqc_kyber.workspace = true
sha2.workspace = true
zeroize.workspace = true
socket2.workspace = true
local-ip-address.workspace = true
network-interface.workspace = true
cudarc.workspace = true
rand.workspace = true
indicatif.workspace = true
memmap2 = "0.9"
dotenvy = "0.15"
eframe = "0.29"
rfd = "0.12"
local_ipaddress = "0.1.3"
reqwest = { version = "0.11", features = ["json"] }

# Optional features
ndarray = "0.16"
ort = { version = "2.0.0-rc.9", optional = true }
reed-solomon-erasure = { version = "6.0", optional = true }

[features]
default = []
onnx = ["ort"]
fec = ["reed-solomon-erasure"]

[build-dependencies]
# For CUDA PTX compilation

[[bin]]
name = "shred"
path = "src/bin/shred.rs"

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"
